# latex-editor-android

./: .gitignore  README.md  metadata.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  tectonic.cpp
app/src/main/java/com/example/: LatexViewModel.kt  LocalLatexCompiler.kt  MainActivity.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/: ExampleUnitTest.kt
